- Fixed drop shadow in Window, ContextMenu, ComboBox and DropDownButton styles - Fixed fonts and ClearType issues in styles - Fixed TabControl and TabItem styles - Fixed DropDownCommandButton submenu location problem (bug #956) - Fixed DropDownCommandButton mouse capture problem (bug #958) - Fixed Theme.Test slow loading (bug #957)

--- a/Source code/Test/MainWindow.xaml
+++ b/Source code/Test/MainWindow.xaml
@@ -415,9 +415,10 @@
                 <Grid Grid.Column="2"
                       Grid.Row="0"
                       Grid.RowSpan="4"
+                      Background="Transparent"
                       metro:ApplicationBar.PreventsOpen="true">
                     <TextBlock Foreground="{DynamicResource MiddleLightBrush}"
-                               FontSize="{Binding RelativeSource={RelativeSource Self}, Path=(metro:Parameters.HeaderFontSize)}"                              
+                               FontSize="{Binding RelativeSource={RelativeSource Self}, Path=(metro:Parameters.HeaderFontSize)}"
                                Text="Click here to see ContextMenu"
                                TextOptions.TextFormattingMode="Ideal"
                                HorizontalAlignment="Center"
