--- a/Source code/Test/App.xaml
+++ b/Source code/Test/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application x:Class="Elysium.Test.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml" Startup="StartupHandler">
 </Application>
