--- a/Source code/Theme/Themes/Buttons/CheckBox.xaml
+++ b/Source code/Theme/Themes/Buttons/CheckBox.xaml
@@ -13,6 +13,8 @@
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThickness), Mode=OneWay}"/>
         <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
         <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.ContentFontSize), Mode=OneWay}"/>
+        <Setter Property="FontStretch" Value="Medium"/>
+        <Setter Property="FontStyle" Value="Normal"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
@@ -28,60 +30,55 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type CheckBox}">
 
-                    <Grid Background="{DynamicResource TransparentBrush}"
-                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
-                        <BulletDecorator Background="{DynamicResource TransparentBrush}"
-                                         TextBlock.Foreground="{TemplateBinding Foreground}"
-                                         TextBlock.FontFamily="{TemplateBinding FontFamily}"
-                                         TextBlock.FontSize="{TemplateBinding FontSize}"
-                                         TextBlock.FontWeight="{TemplateBinding FontWeight}"
-                                         FlowDirection="{TemplateBinding FlowDirection}">
-                            <BulletDecorator.Bullet>
-                                <Border Background="{TemplateBinding Background}"
-                                        BorderBrush="{TemplateBinding BorderBrush}"
-                                        BorderThickness="{TemplateBinding BorderThickness}"
-                                        Width="{TemplateBinding root:Parameters.BulletDecoratorSize}"
-                                        Height="{TemplateBinding root:Parameters.BulletDecoratorSize}">
-                                    <Grid Background="{DynamicResource TransparentBrush}">
-                                        <Path x:Name="CheckBullet"
-                                              Fill="{DynamicResource TransparentBrush}"
-                                              Stroke="{DynamicResource AccentBrush}"
-                                              StrokeThickness="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.BoldThicknessValue), Mode=OneWay}"
-                                              Stretch="Fill"
-                                              Visibility="Collapsed"
-                                              Width="{TemplateBinding root:Parameters.CheckSize}" Height="{TemplateBinding root:Parameters.CheckSize}">
-                                            <Path.Data>
-                                                <GeometryGroup>
-                                                    <LineGeometry StartPoint="0,3" EndPoint="4,8"/>
-                                                    <LineGeometry StartPoint="4,8" EndPoint="8,0"/>
-                                                </GeometryGroup>
-                                            </Path.Data>
-                                        </Path>
-                                        <Path x:Name="IndeterminateBullet"
-                                              Fill="{DynamicResource AccentBrush}"
-                                              StrokeThickness="0"
-                                              Stretch="Fill"
-                                              Visibility="Collapsed"
-                                              Margin="2"
-                                              Width="{TemplateBinding root:Parameters.BulletSize}" Height="{TemplateBinding root:Parameters.BulletSize}">
-                                            <Path.Data>
-                                                <GeometryGroup>
-                                                    <RectangleGeometry Rect="0,0,1,1"/>
-                                                </GeometryGroup>
-                                            </Path.Data>
-                                        </Path>
-                                    </Grid>
-                                </Border>
-                            </BulletDecorator.Bullet>
-                            <Border Background="{DynamicResource TransparentBrush}"
-                                    Margin="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.BoldPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}">
-                                <ContentPresenter Margin="{TemplateBinding Padding}"
-                                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                                  RecognizesAccessKey="True"/>
-                            </Border>                              
-                        </BulletDecorator>
-                    </Grid>
+                    <BulletDecorator TextBlock.Foreground="{TemplateBinding Foreground}"
+                                        TextBlock.FontFamily="{TemplateBinding FontFamily}"
+                                        TextBlock.FontSize="{TemplateBinding FontSize}"
+                                        TextBlock.FontWeight="{TemplateBinding FontWeight}"
+                                        FlowDirection="{TemplateBinding FlowDirection}"
+                                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                        <BulletDecorator.Bullet>
+                            <Border Background="{TemplateBinding Background}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    Width="{TemplateBinding root:Parameters.BulletDecoratorSize}"
+                                    Height="{TemplateBinding root:Parameters.BulletDecoratorSize}">
+                                <Grid>
+                                    <Path x:Name="CheckBullet"
+                                            Stroke="{DynamicResource AccentBrush}"
+                                            StrokeThickness="{TemplateBinding root:Parameters.BoldThicknessValue}"
+                                            Stretch="Fill"
+                                            Visibility="Collapsed"
+                                            Width="{TemplateBinding root:Parameters.CheckSize}" Height="{TemplateBinding root:Parameters.CheckSize}">
+                                        <Path.Data>
+                                            <GeometryGroup>
+                                                <LineGeometry StartPoint="0,3" EndPoint="4,8"/>
+                                                <LineGeometry StartPoint="4,8" EndPoint="8,0"/>
+                                            </GeometryGroup>
+                                        </Path.Data>
+                                    </Path>
+                                    <Path x:Name="IndeterminateBullet"
+                                            Fill="{DynamicResource AccentBrush}"
+                                            StrokeThickness="0"
+                                            Stretch="Fill"
+                                            Visibility="Collapsed"
+                                            Margin="2"
+                                            Width="{TemplateBinding root:Parameters.BulletSize}" Height="{TemplateBinding root:Parameters.BulletSize}">
+                                        <Path.Data>
+                                            <GeometryGroup>
+                                                <RectangleGeometry Rect="0,0,1,1"/>
+                                            </GeometryGroup>
+                                        </Path.Data>
+                                    </Path>
+                                </Grid>
+                            </Border>
+                        </BulletDecorator.Bullet>
+                        <Border Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.BoldPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}">
+                            <ContentPresenter Margin="{TemplateBinding Padding}"
+                                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                RecognizesAccessKey="True"/>
+                        </Border>                              
+                    </BulletDecorator>
                     
                     <ControlTemplate.Triggers>						
                         <Trigger Property="IsChecked" Value="True">
