--- a/Source code/Theme/Themes/Buttons/CommandButtonBase.xaml
+++ b/Source code/Theme/Themes/Buttons/CommandButtonBase.xaml
@@ -14,6 +14,8 @@
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.SemiBoldThickness), Mode=OneWay}"/>
         <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
         <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.ContentFontSize), Mode=OneWay}"/>
+        <Setter Property="FontStretch" Value="Medium"/>
+        <Setter Property="FontStyle" Value="Normal"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="root:Parameters.CommandButtonMask" Value="{DynamicResource MiddleLightBrush}"/>
@@ -27,9 +29,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type primitives:CommandButtonBase}">
-                    
-                    <Grid Background="{DynamicResource TransparentBrush}"
-                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+
+                    <Grid SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="Auto"/>
@@ -99,6 +100,7 @@
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Background" Value="{DynamicResource BackgroundBrush}"/>
                 <Setter Property="BorderBrush" Value="{DynamicResource DisabledBrush}"/>
+                <Setter Property="Foreground" Value="{DynamicResource DisabledBrush}"/>
                 <Setter Property="root:Parameters.CommandButtonMask" Value="{DynamicResource DisabledBrush}"/>
             </Trigger>
         </Style.Triggers>
