--- a/Source code/Theme/Themes/Buttons/DropDownCommandButton.xaml
+++ b/Source code/Theme/Themes/Buttons/DropDownCommandButton.xaml
@@ -7,16 +7,69 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
         <ResourceDictionary Source="/Elysium;component/Themes/Buttons/CommandButtonBase.xaml"/>
+        <ResourceDictionary Source="/Elysium;component/Themes/Menus/Submenu.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
+    <Style x:Key="DropDownCommandButtonSubmenuStyle" TargetType="{x:Type controls:Submenu}" BasedOn="{StaticResource {x:Type controls:Submenu}}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type controls:Submenu}">
+                    <Border x:Name="LayoutRoot"
+                            Tag="{DynamicResource {x:Static SystemParameters.DropShadowKey}}">
+                        <ScrollViewer Background="{TemplateBinding Background}"
+                                      BorderBrush="{TemplateBinding BorderBrush}"
+                                      BorderThickness="{TemplateBinding BorderThickness}"
+                                      TextBlock.Foreground="{TemplateBinding Foreground}"
+                                      TextBlock.FontFamily="{TemplateBinding FontFamily}"
+                                      TextBlock.FontSize="{TemplateBinding FontSize}"
+                                      TextBlock.FontStretch="{TemplateBinding FontStretch}"
+                                      TextBlock.FontStyle="{TemplateBinding FontStyle}"
+                                      TextBlock.FontWeight="{TemplateBinding FontWeight}"
+                                      SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                            <ScrollViewer.Resources>
+                                <Style TargetType="{x:Type ScrollBar}" BasedOn="{StaticResource {x:Type ScrollBar}}">
+                                    <Style.Triggers>
+                                        <Trigger Property="Orientation" Value="Vertical">
+                                            <Setter Property="BorderThickness" Value="0"/>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </ScrollViewer.Resources>
+                            <StackPanel IsItemsHost="True"
+                                        KeyboardNavigation.DirectionalNavigation="Cycle"/>
+                        </ScrollViewer>
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=LayoutRoot, Path=Tag}" Value="True">
+                            <Setter TargetName="LayoutRoot" Property="Effect">
+                                <Setter.Value>
+                                    <DropShadowEffect Color="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.ShadowBrush).(SolidColorBrush.Color)}"
+                                                      BlurRadius="4" ShadowDepth="0"
+                                                      Direction="270"
+                                                      Opacity="0.7"/>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter TargetName="LayoutRoot" Property="Background" Value="{DynamicResource Transparent}"/>
+                            <Setter TargetName="LayoutRoot" Property="Padding" Value="4"/>
+                        </DataTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style x:Key="{x:Type controls:DropDownCommandButton}" TargetType="{x:Type controls:DropDownCommandButton}" BasedOn="{StaticResource {x:Type primitives:CommandButtonBase}}">
+        
+        <Style.Resources>
+            <Style TargetType="{x:Type controls:Submenu}" BasedOn="{StaticResource DropDownCommandButtonSubmenuStyle}"/>
+        </Style.Resources>
         
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:DropDownCommandButton}">
 
                     <Grid x:Name="LayoutRoot"
-                          Background="{DynamicResource TransparentBrush}"
                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
@@ -65,10 +118,11 @@
                                           HorizontalAlignment="Center"/>
                         <Popup x:Name="PART_Popup"
                                Grid.Row="1"
+                               AllowsTransparency="True"
                                IsOpen="{Binding IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                StaysOpen="False"
                                Placement="Custom"
-                               PlacementTarget="{Binding ElementName=LayoutRoot}"
+                               VerticalOffset="{TemplateBinding root:Parameters.BoldPaddingValue}"
                                MaxHeight="{TemplateBinding MaxDropDownHeight}"/>
                     </Grid>
                     
