--- a/Source code/Theme/Themes/Menus/ContextMenu.xaml
+++ b/Source code/Theme/Themes/Menus/ContextMenu.xaml
@@ -1,16 +1,30 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:root="clr-namespace:Elysium"
-                    xmlns:controls="clr-namespace:Elysium.Controls">
-    
-    <Style x:Key="ContextMenuStyle" TargetType="{x:Type ContextMenu}">
+                    xmlns:root="clr-namespace:Elysium">
+
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+
+    <Style TargetType="{x:Type ContextMenu}">
         
         <Setter Property="Background" Value="{DynamicResource BackgroundBrush}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource LowlightBrush}"/>
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThickness), Mode=OneWay}"/>
         <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
         <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.ContentFontSize), Mode=OneWay}"/>
+        <Setter Property="FontStretch" Value="Medium"/>
+        <Setter Property="FontStyle" Value="Normal"/>
         <Setter Property="FontWeight" Value="Normal"/>
+        <Setter Property="TextOptions.TextFormattingMode" Value="Display"/>
+        <Setter Property="TextOptions.TextRenderingMode" Value="ClearType"/>
+        <Setter Property="RenderOptions.ClearTypeHint" Value="Enabled"/>
+
+        <Setter Property="HasDropShadow" Value="{DynamicResource {x:Static SystemParameters.DropShadowKey}}"/>
+        <Setter Property="root:Parameters.ShadowBrush" Value="{DynamicResource ForegroundBrush}"/>
+        
+        <Setter Property="Focusable" Value="False"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
 
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="VerticalContentAlignment" Value="Stretch"/>
@@ -24,33 +38,46 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ContextMenu}">
-                    <!--Popup x:Name="PART_Popup"
-                           IsOpen="{Binding IsOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}"
-                           StaysOpen="{TemplateBinding StaysOpen}"
-                           HorizontalOffset="{TemplateBinding HorizontalOffset}"
-                           VerticalOffset="{TemplateBinding VerticalOffset}"
-                           Placement="{TemplateBinding Placement}"
-                           PlacementTarget="{TemplateBinding PlacementTarget}"
-                           PlacementRectangle="{TemplateBinding PlacementRectangle}"
-                           CustomPopupPlacementCallback="{TemplateBinding CustomPopupPlacementCallback}"-->
+                    <Border x:Name="LayoutRoot">
                         <Border Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 TextBlock.Foreground="{TemplateBinding Foreground}"
                                 TextBlock.FontFamily="{TemplateBinding FontFamily}"
                                 TextBlock.FontSize="{TemplateBinding FontSize}"
+                                TextBlock.FontStretch="{TemplateBinding FontStretch}"
+                                TextBlock.FontStyle="{TemplateBinding FontStyle}"
                                 TextBlock.FontWeight="{TemplateBinding FontWeight}"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                             <StackPanel IsItemsHost="True"
                                         KeyboardNavigation.DirectionalNavigation="Cycle"/>
                         </Border>
-                    <!--/Popup-->
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="HasDropShadow" Value="True">
+                            <Setter TargetName="LayoutRoot" Property="Effect">
+                                <Setter.Value>
+                                    <DropShadowEffect Color="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.ShadowBrush).(SolidColorBrush.Color)}"
+                                                      BlurRadius="4" ShadowDepth="2"
+                                                      Direction="315"
+                                                      Opacity="0.3"/>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter TargetName="LayoutRoot" Property="Background" Value="{DynamicResource Transparent}"/>
+                            <Setter TargetName="LayoutRoot" Property="Padding" Value="0,0,6,6"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        
-    </Style>
 
-    <Style TargetType="{x:Type ContextMenu}" BasedOn="{StaticResource ContextMenuStyle}"/>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource IsGreaterThanConverter}, ConverterParameter=18}">
+                <Setter Property="TextOptions.TextFormattingMode" Value="Ideal"/>
+            </DataTrigger>
+        </Style.Triggers>
+
+    </Style>
 
 </ResourceDictionary>
