--- a/Source code/Theme/Themes/Ranges/ToggleSwitch.xaml
+++ b/Source code/Theme/Themes/Ranges/ToggleSwitch.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:root="clr-namespace:Elysium"
-                    xmlns:controls="clr-namespace:Elysium.Controls"
-                    xmlns:converters="clr-namespace:Elysium.Converters">
+                    xmlns:controls="clr-namespace:Elysium.Controls">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
@@ -77,7 +76,10 @@
         <Setter Property="BorderBrush" Value="{DynamicResource MiddleLightBrush}"/>
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThickness), Mode=OneWay}"/>
         <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
-        <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.TextFontSize), Mode=OneWay}"/>
+        <Setter Property="Foreground" Value="{DynamicResource ContrastBrush}"/>
+        <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.ContentFontSize), Mode=OneWay}"/>
+        <Setter Property="FontStretch" Value="Medium"/>
+        <Setter Property="FontStyle" Value="Normal"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -95,12 +97,7 @@
 
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type controls:ToggleSwitch}">
-                    
-                    <ControlTemplate.Resources>
-                        <converters:ThicknessPositiveToNegativeConverter x:Key="ThicknessPositiveToNegativeConverter"/>
-                    </ControlTemplate.Resources>
-                    
+                <ControlTemplate TargetType="{x:Type controls:ToggleSwitch}">                    
                     <Grid SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
@@ -113,6 +110,12 @@
                                           ContentStringFormat="{TemplateBinding OnHeaderStringFormat}"
                                           ContentTemplate="{TemplateBinding OnHeaderTemplate}"
                                           ContentTemplateSelector="{TemplateBinding OnHeaderTemplateSelector}"
+                                          TextBlock.Foreground="{TemplateBinding Foreground}"
+                                          TextBlock.FontFamily="{TemplateBinding FontFamily}"
+                                          TextBlock.FontSize="{TemplateBinding FontSize}"
+                                          TextBlock.FontStretch="{TemplateBinding FontStretch}"
+                                          TextBlock.FontStyle="{TemplateBinding FontStyle}"
+                                          TextBlock.FontWeight="{TemplateBinding FontWeight}"
                                           HorizontalAlignment="Left"
                                           VerticalAlignment="Center"
                                           Visibility="Collapsed"/>
@@ -122,6 +125,12 @@
                                           ContentStringFormat="{TemplateBinding OffHeaderStringFormat}"
                                           ContentTemplate="{TemplateBinding OffHeaderTemplate}"
                                           ContentTemplateSelector="{TemplateBinding OffHeaderTemplateSelector}"
+                                          TextBlock.Foreground="{TemplateBinding Foreground}"
+                                          TextBlock.FontFamily="{TemplateBinding FontFamily}"
+                                          TextBlock.FontSize="{TemplateBinding FontSize}"
+                                          TextBlock.FontStretch="{TemplateBinding FontStretch}"
+                                          TextBlock.FontStyle="{TemplateBinding FontStyle}"
+                                          TextBlock.FontWeight="{TemplateBinding FontWeight}"
                                           HorizontalAlignment="Left"
                                           VerticalAlignment="Center"
                                           Visibility="Collapsed"/>
@@ -134,20 +143,20 @@
                                 <Rectangle x:Name="PART_Fill"
                                            DockPanel.Dock="Left"
                                            Fill="{DynamicResource AccentBrush}"
-                                           Margin="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Top, Bottom'}"
+                                           Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Top, Bottom'}"
                                            Panel.ZIndex="0"
                                            Width="0"/>
                                 <Thumb x:Name="PART_Thumb"
                                        DockPanel.Dock="Left"
                                        BorderBrush="{TemplateBinding Background}"
-                                       BorderThickness="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"
+                                       BorderThickness="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"
                                        IsEnabled="{TemplateBinding IsEnabled}"
                                        Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness, Mode=OneWay, Converter={StaticResource ThicknessPositiveToNegativeConverter}}"
                                        Width="{TemplateBinding root:Parameters.ToggleSwitchThumbThickness}"
                                        Panel.ZIndex="1"
                                        Style="{StaticResource ToggleSwitchThumbStyle}"/>
                                 <Button x:Name="PART_Switch"
-                                        Margin="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Right, Top, Bottom'}"
+                                        Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Right, Top, Bottom'}"
                                         Panel.ZIndex="0"
                                         Style="{StaticResource ToggleSwitchSwitchStyle}"/>
                             </DockPanel>
@@ -162,11 +171,11 @@
                             <Setter TargetName="OnHeaderHost" Property="Visibility" Value="Visible"/>
                             <Setter TargetName="PART_Fill" Property="DockPanel.Dock" Value="Right"/>
                             <Setter TargetName="PART_Fill" Property="Fill" Value="{DynamicResource HighlightBrush}"/>
-                            <Setter TargetName="PART_Fill" Property="Margin" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Right, Top, Bottom'}"/>
+                            <Setter TargetName="PART_Fill" Property="Margin" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Right, Top, Bottom'}"/>
                             <Setter TargetName="PART_Thumb" Property="DockPanel.Dock" Value="Right"/>
-                            <Setter TargetName="PART_Thumb" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}"/>
+                            <Setter TargetName="PART_Thumb" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}"/>
                             <Setter TargetName="PART_Thumb" Property="Margin" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness, Mode=OneWay, Converter={StaticResource ThicknessPositiveToNegativeConverter}}"/>
-                            <Setter TargetName="PART_Switch" Property="Margin" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Top, Bottom'}"/>
+                            <Setter TargetName="PART_Switch" Property="Margin" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Top, Bottom'}"/>
                         </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
@@ -183,7 +192,7 @@
                                 <Condition Property="IsChecked" Value="False"/>
                             </MultiTrigger.Conditions>
                             <MultiTrigger.Setters>
-                                <Setter TargetName="PART_Thumb" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}"/>
+                                <Setter TargetName="PART_Thumb" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}"/>
                             </MultiTrigger.Setters>
                         </MultiTrigger>
                         <MultiTrigger>
@@ -192,7 +201,7 @@
                                 <Condition Property="IsChecked" Value="True"/>
                             </MultiTrigger.Conditions>
                             <MultiTrigger.Setters>
-                                <Setter TargetName="PART_Thumb" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"/>
+                                <Setter TargetName="PART_Thumb" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(root:Parameters.DefaultThicknessValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"/>
                             </MultiTrigger.Setters>
                         </MultiTrigger>
                     </ControlTemplate.Triggers>
