--- a/Source code/Theme/Themes/Scrolls/ScrollBar.xaml
+++ b/Source code/Theme/Themes/Scrolls/ScrollBar.xaml
@@ -32,7 +32,8 @@
                                  Fill="{TemplateBinding BorderBrush}"
                                  StrokeThickness="0"
                                  Stretch="Uniform"
-                                 Width="{TemplateBinding root:Parameters.ScrollBarArrowSize}" Height="{TemplateBinding root:Parameters.ScrollBarArrowSize}"/>
+                                 Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type ScrollBar}}, Path=(root:Parameters.ScrollBarArrowSize), Mode=OneWay}"
+                                 Height="{Binding RelativeSource={RelativeSource AncestorType={x:Type ScrollBar}}, Path=(root:Parameters.ScrollBarArrowSize), Mode=OneWay}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -52,7 +53,7 @@
         
     </Style>
 
-    <Style x:Key="ScrollBarLineUpButtonStyle" TargetType="{x:Type RepeatButton}">
+    <Style x:Key="ScrollBarLineUpButtonStyle" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ScrollBarLineDownButtonStyle}">
         <Setter Property="LayoutTransform">
             <Setter.Value>
                 <RotateTransform Angle="180"/>
@@ -60,7 +61,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ScrollBarLineLeftButtonStyle" TargetType="{x:Type RepeatButton}">
+    <Style x:Key="ScrollBarLineLeftButtonStyle" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ScrollBarLineDownButtonStyle}">
         <Setter Property="LayoutTransform">
             <Setter.Value>
                 <RotateTransform Angle="-90"/>
@@ -68,7 +69,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ScrollBarLineRightButtonStyle" TargetType="{x:Type RepeatButton}">
+    <Style x:Key="ScrollBarLineRightButtonStyle" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ScrollBarLineDownButtonStyle}">
         <Setter Property="LayoutTransform">
             <Setter.Value>
                 <RotateTransform Angle="90"/>
@@ -107,7 +108,7 @@
     <Style x:Key="ScrollBarThumbStyle" TargetType="{x:Type Thumb}">
 
         <Setter Property="Background" Value="{DynamicResource MiddleLightBrush}"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource TransparentBrush}"/>
+        <Setter Property="BorderBrush" Value="{x:Null}"/>
         <Setter Property="BorderThickness" Value="0"/>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -124,8 +125,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
-                    <Grid Background="{DynamicResource TransparentBrush}"
-                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                    <Grid SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Rectangle Fill="{TemplateBinding Background}"
                                    Stroke="{TemplateBinding BorderBrush}"
                                    StrokeThickness="0"
@@ -154,7 +154,7 @@
                 BorderBrush="{TemplateBinding BorderBrush}"
                 BorderThickness="{TemplateBinding BorderThickness}"
                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
-            <Grid Background="{DynamicResource TransparentBrush}">
+            <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
@@ -163,7 +163,6 @@
                 <RepeatButton Grid.Column="0"
                               Command="{x:Static ScrollBar.LineLeftCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              root:Parameters.ScrollBarArrowSize="{TemplateBinding root:Parameters.ScrollBarArrowSize}"
                               Style="{StaticResource ScrollBarLineLeftButtonStyle}"
                               Visibility="Collapsed"/>
                 <Track x:Name="PART_Track"
@@ -186,7 +185,6 @@
                 <RepeatButton Grid.Column="2"
                               Command="{x:Static ScrollBar.LineRightCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              root:Parameters.ScrollBarArrowSize="{TemplateBinding root:Parameters.ScrollBarArrowSize}"
                               Style="{StaticResource ScrollBarLineRightButtonStyle}"
                               Visibility="Collapsed"/>
             </Grid>
@@ -198,7 +196,7 @@
                 BorderBrush="{TemplateBinding BorderBrush}"
                 BorderThickness="{TemplateBinding BorderThickness}"
                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
-            <Grid Background="{DynamicResource TransparentBrush}">
+            <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
@@ -207,7 +205,6 @@
                 <RepeatButton Grid.Row="0"
                               Command="{x:Static ScrollBar.LineUpCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              root:Parameters.ScrollBarArrowSize="{TemplateBinding root:Parameters.ScrollBarArrowSize}"
                               Style="{StaticResource ScrollBarLineUpButtonStyle}"
                               Visibility="Collapsed"/>
                 <Track x:Name="PART_Track"
@@ -231,7 +228,6 @@
                 <RepeatButton Grid.Row="2"
                               Command="{x:Static ScrollBar.LineDownCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              root:Parameters.ScrollBarArrowSize="{TemplateBinding root:Parameters.ScrollBarArrowSize}"
                               Style="{StaticResource ScrollBarLineDownButtonStyle}"
                               Visibility="Collapsed"/>
             </Grid>
@@ -240,7 +236,7 @@
 
     <Style TargetType="{x:Type ScrollBar}">
 
-        <Setter Property="Background" Value="{DynamicResource TransparentBrush}"/>
+        <Setter Property="Background" Value="{x:Null}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource MiddleLightBrush}"/>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
