--- a/Source code/Theme/Themes/Selectors/ComboBoxItem.xaml
+++ b/Source code/Theme/Themes/Selectors/ComboBoxItem.xaml
@@ -5,7 +5,9 @@
         <ResourceDictionary Source="/Elysium;component/Themes/Selectors/SelectorsItemsBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource SelectorsItemsBaseStyle}">
+    <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource SelectorsItemsBaseStyle}">  
+        <Setter Property="Background" Value="{DynamicResource BackgroundBrush}"/>
+        
         <Style.Triggers>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
